--- a/src/app/concursos/secciones-abm/secciones-abm.page.html
+++ b/src/app/concursos/secciones-abm/secciones-abm.page.html
@@ -100,41 +100,48 @@
                     <ion-row size="12">
                       <ion-col class="ion-align-self-start">
                         <ion-item-group *ngFor="let s of getParentSections()">
-                          <ion-item-divider lines="full" mode="ios">
-                            <h4 class="ion-margin-top ion-margin-bottom"> <b>{{ s.name }}</b></h4>
-                            <ion-col
-                              slot="end"
-                              size="1"
-                              size-md="2"
-                              class="ion-align-self-start ion-align-self-center"
-                            >
-                              <ion-buttons
-                                class="
-                                  ion-hide-md-down ion-justify-content-center
-                                "
+                          <ion-item-divider lines="full" mode="ios" style="--inner-padding-end: 16px">
+                            <ion-row class="w-100">
+                              <ion-col>
+                                <h4 class="ion-margin-top ion-margin-bottom"> <b>{{ s.name }}</b></h4>
+                              </ion-col>
+                              <!-- slot="end" -->
+                              <!-- class="ion-align-self-start ion-align-self-center" -->
+                              <ion-col
+                                size="1"
+                                size-md="2"
+                                class="ion-align-self-center"
                               >
-                                <ion-button title="Agregar subsección" (click)="postSubSection(s)">
-                                  <ion-icon name="add-outline"></ion-icon>
-                                </ion-button>
-                                <ion-button title="Editar sección" (click)="postSection(s)">
-                                  <ion-icon name="create"></ion-icon>
-                                </ion-button>
-                                <ion-button title="Eliminar sección" (click)="deleteSection(s)">
-                                  <ion-icon name="trash"></ion-icon>
-                                </ion-button>
-                              </ion-buttons>
-                              <ion-buttons class="ion-hide-md-up">
-                                <ion-button
-                                  (click)="mostrarAcciones($event, s)"
+                                <ion-buttons
+                                  class="
+                                    ion-justify-content-end
+                                  "
                                 >
-                                  <ion-icon
-                                    slot="icon-only"
-                                    ios="ellipsis-horizontal"
-                                    md="ellipsis-vertical"
-                                  ></ion-icon>
-                                </ion-button>
-                              </ion-buttons>
-                            </ion-col>
+                                  <div class="ion-hide-md-down">
+                                    <ion-button title="Agregar subsección" (click)="postSubSection(s)" color="dark" >
+                                      <ion-icon name="add-outline"></ion-icon>
+                                    </ion-button>
+                                    <ion-button title="Editar sección" (click)="postSection(s)" color="dark" >
+                                      <ion-icon name="create"></ion-icon>
+                                    </ion-button>
+                                    <ion-button title="Eliminar sección" (click)="deleteSection(s)" color="dark" >
+                                      <ion-icon name="trash"></ion-icon>
+                                    </ion-button>
+                                  </div>
+                                  <div class="ion-hide-md-up">
+                                    <ion-button color="dark"
+                                      (click)="mostrarAcciones($event, s)"
+                                    >
+                                      <ion-icon 
+                                        slot="icon-only"
+                                        ios="ellipsis-horizontal"
+                                        md="ellipsis-vertical"
+                                      ></ion-icon>
+                                    </ion-button>
+                                  </div>
+                                </ion-buttons>
+                              </ion-col>
+                            </ion-row>
                           </ion-item-divider>
 
                           <ng-template #textoSeccion>
@@ -147,31 +154,30 @@
                             </ion-item>
                           </ng-template>
                           <!-- TODO: refactorizar el ngIf -->
-                          <div class="ion-padding-top" style="--ion-padding: 11px"
+                          <div  class="ion-padding-top" style="--ion-padding: 10px"
                             *ngIf="getSubSections(s.id).length > 0; else textoSeccion"
                           >
-                            <ion-item
+                            <ion-item 
                               *ngFor="let s1 of getSubSections(s.id) as subsections"
                             >
                               <ion-row class="w-100 ion-align-items-center">
                                 <!-- TODO: debería ser una tabla NxN para poder tene dos tablas por separado de carga!!!!  -->
                                 <!-- para achicar el tamaño del sector de la subseccion modificar el  size-md de la sig columna -->
-                                <ion-col size-md="11.57">
+                                <!-- <ion-col size-md="11.57"> -->
+                                <ion-col >
                                   <!-- <ion-col> -->
-                                  <ion-row>
+                                  <ion-row >
                                     <ion-col size="10">
                                       <ion-text>{{s1.name}} </ion-text>
                                     </ion-col>
                                     <ion-col
                                       size="2"
                                       size-md="2"
-                                      class="ion-float-end"
                                     >
                                       <!-- ion-hide-md-down -->
                                       <ion-buttons
                                         class="
                                           ion-justify-content-end
-                                          ion-margin-start
                                         "
                                       >
                                         <ion-button
