--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -57,6 +57,14 @@
           <ion-header>
             <ion-toolbar>
               <ion-list>
+                <ion-item 
+                  lines="none"
+                >
+                  <ion-icon name="moon-outline" slot="start"></ion-icon>
+                  <!-- <ion-label>Modo oscuro</ion-label> -->
+                  <ion-toggle color="dark" [(ngModel)]="darkMode" style="padding-inline: 0" ></ion-toggle>
+
+                </ion-item>
                 <ion-item
                   lines="none"
                   [routerLink]="['/usuarios', 'editar', authService.userId]"
