--- a/src/app/modules/auth/components/login-view/login-view.component.html
+++ b/src/app/modules/auth/components/login-view/login-view.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content [ngClass]="{'dark': responsiveService.darkMode}">
   <ion-grid>
     <ion-col>
       <ion-row class="ion-justify-content-center">
