--- a/src/app/modules/auth/components/login-view/login-view.component.scss
+++ b/src/app/modules/auth/components/login-view/login-view.component.scss
@@ -1,5 +1,5 @@
 .logoEntrada{
-    filter: contrast(200%);
+    // filter: contrast(200%);
     filter: invert(100%);
 }
 
@@ -19,13 +19,15 @@ ion-item {
     --inner-padding-end: 0px;
 }
 
-@media (prefers-color-scheme: dark) {
+// @media (prefers-color-scheme: dark) {
+// body.dark {
+ion-content.dark {
     /*
      * Dark Colors
      * -------------------------------------------
      */
      .logoEntrada{
-        filter: contrast(200%);
+        // filter: contrast(200%);
         filter: invert(0);
     }
     ion-card{
