concursos, concurso-detail

--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -114,13 +114,13 @@
                   <ion-icon name="people-outline"></ion-icon>
                   <ion-label>Concursantes</ion-label>
                   <!-- <ion-badge>{{ loading ? '' : inscriptos.length }}</ion-badge> -->
-                  <ion-badge>{{inscriptos.length }}</ion-badge>
+                  <ion-badge>{{concurso.countProfileContests}}</ion-badge>
                 </ion-tab-button>
         
                 <ion-tab-button tab="fotografias">
                   <ion-icon name="images-outline"></ion-icon>
                   <ion-label>Fotografias</ion-label>
-                  <ion-badge>{{resultadosConcurso.length }}</ion-badge>
+                  <ion-badge>{{concurso.countContestResults}}</ion-badge>
                 </ion-tab-button>
               </ion-tab-bar>
             </ion-tabs>
