--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -35,7 +35,7 @@
               </h1>
               <ion-fab-button
                 size="small"
-                *ngIf="contestService.isActive(concurso)"
+                *ngIf="contestService.isActive(concurso) && concursantes.length > 0"
                 (click)="inscribirConcursante()"
               >
                 <!-- [routerLink]="['agregar-foto']"   -->
